--- a/gtk-3.0/gtk-widgets.css
+++ b/gtk-3.0/gtk-widgets.css
@@ -39,8 +39,7 @@
     -GtkWidget-focus-padding: 0;
     -GtkWidget-focus-line-width: 0;
     
-    -GtkSeparatorMenuItem-horizontal-padding: 0;
-    -GtkSeparatorMenuItem-horizontal-padding: 0;
+    -GtkSeparatorMenuItem-horizontal-padding: 2px;
     -GtkTreeView-vertical-separator: 0;
     -GtkWidget-separator-width: 0;
     -GtkWidget-separator-height: 0;
@@ -142,11 +141,7 @@ GtkLabel:insensitive {
 }
 
 .tooltip * {
-	border: solid;
-    background-color: @theme_tooltip_bg_color;
-	background-image: none;
-    border-image: url("darkelements/button-hover-border.png") 2 2 2 2 / 2px 2px 2px 2px stretch stretch;
-    border-width:2px;
+
 }
 
 .grip {
@@ -168,15 +163,7 @@ Genericmenuitem .menuitem.separator,
 DbusmenuGtkMenu .menuitem.separator,
 .menubar .menuitem.separator,
 .primary-toolbar .menuitem.separator {
-	border:solid;
-    background-image: url("darkelements/line-h.png");
-	background-size: 100% 100%;
-    -GtkSeparatorMenuItem-horizontal-padding: 2px;
-    -GtkWidget-separator-height: 2px;
-    border-image: url("darkelements/line-h.png") 2 0 0 0 / 2px 0 0 0 stretch ;
-    border-width:2px;
-    padding: 2px;
-    color: alpha(#ffffff, 0.1);
+
 }
 
 GtkPaned{
@@ -808,6 +795,7 @@ GtkTreeMenu.menu {
 	background-size: 100% 100%;
 	margin:10px;
 }
+
 GtkTreeMenu .menuitem, 
 GtkTreeMenu .menuitem * {
     color: @theme_text_color;
@@ -837,7 +825,7 @@ GtkTreeMenu .menuitem:prelight * {
 }
 .menu.menuitem {
 /* test */
-    padding: 2px 0 2px 0;
+    padding: 1px 4px 0 2px;
     
 }
 .menu.button { 
@@ -875,11 +863,11 @@ GtkTreeMenu .menuitem:prelight * {
     border-image:url("darkelements/menubar-border.png") 1 0 2 0 / 1px 0 2px 0 stretch;
     color: @theme_text_color;
     border-width: 1px 0 1px 0;
-    	    border-color: transparent;
-    padding: 2px 0 0 0 ;
+    border-color: transparent;
+    padding:  1px 0 0 2px;
 	background-size: 100% 100%;
     -GtkWidget-window-dragging: false;
-    -GtkMenuBar-internal-padding:  0  ;
+    -GtkMenuBar-internal-padding:1;
 }
 /**
  * Menu bar root tree (File, View, ... ,Help)
@@ -888,41 +876,55 @@ GtkMenu {
 	-GtkMenu-vertical-offset: -2px;
 	-GtkMenu-shadow-type: none;
 	-GtkWidget-wide-seperators: 1;
-	border: 1px solid #ff0000; 
+	border: 1px solid #ff0000; /* if you see this read you did not override it */
 }
 
-.menubar .menuitem {
+.menubar > .menuitem {
 	engine: adwaita;
     -GtkArrow-shadow-style:none;
 	-GtkArrow-arrow-scaling:0.6;
 	-GtkMenuItem-arrow-scaling:0.6;
-	padding: 1px 4px 0 4px;
+	padding: 0 4px 0 4px;
 	
 }
 
-.menubar .menuitem:prelight {
+.menubar > .menuitem:prelight {
     background-image: url("darkelements/menubar-item.png");
 	border: solid;	
     border-image: url("darkelements/menubar-item-border.png") 2 2 0 2 / 2px 2px 0 2px stretch stretch;
     border-width: 2px 2px 0 2px;
 	background-size: 100% 100%;
-	padding: 1px 4px 0 4px;
+	padding: 0 4px 0 4px;
 
+}
+.menuitem{
+	padding: 1px 4px 0 2px;
+}
+.menuitem:prelight {
+    border: solid;
+    background-image: url("darkelements/menubar-item-active.png");
+    border-image: url("darkelements/menubar-item-border-active.png") 2 2 2 2 / 2px 2px 2px 2px stretch stretch;
+    border-width: 2px;
+    background-size: 100% 100%;
+    padding: 1px 4px 0 2px;
+    border-color: transparent;
+    background-color: transparent;
 }
 /**
  * Menu bar root tree items (Open, Save, Save AS)
  */
 .menubar .menuitem .menuitem{
-	padding: 0;
+	padding: 1px 4px 0 2px;
 		background-color: transparent;
 }
+
 .menubar .menuitem .menuitem:prelight {
     border: solid;
     background-image: url("darkelements/menubar-item-active.png");
     border-image: url("darkelements/menubar-item-border-active.png") 2 2 2 2 / 2px 2px 2px 2px stretch stretch;
     border-width: 2px;
     background-size: 100% 100%;
-    padding: 0;
+    padding: 1px 4px 0 2px;
     border-color: transparent;
     background-color: transparent;
 }
@@ -930,15 +932,15 @@ GtkMenu {
 
 .menuitem{
 	background-color: transparent;
-	padding:0;
+	padding: 1px 4px 0 2px;
 }
-.menuitem:prelight { /* 666 */
+.menuitem:prelight { 
     border: solid;
     background-image: url("darkelements/menubar-item-active.png");
     border-image: url("darkelements/menubar-item-border-active.png") 2 2 2 2 / 2px 2px 2px 2px stretch stretch;
     border-width: 2px;
     background-size: 100% 100%;
-    padding: 0;
+    padding: 1px 4px 0 2px;
     border-color: transparent;
     background-color: transparent;
 }
@@ -956,15 +958,11 @@ GtkMenu {
     color: @menu_fg_color;
 }
 .menuitem .separator {
-    border:solid;
-    background-image: url("darkelements/line-h.png");
-	background-size: 100% 100%;
-    -GtkSeparatorMenuItem-horizontal-padding: 2px;
-    -GtkWidget-separator-height: 2px;
-    border-image: url("darkelements/line-h.png") 2 0 0 0 / 2px 0 0 0 stretch ;
-    border-width:2px;
-    padding: 3px 2px;
-    color: alpha(#ffffff, 0.1);
+	-GtkWidget-wide-separators: true;
+	-GtkWidget-separator-height: 2px;
+	border:solid;
+    border-image: url("darkelements/line-h.png") 0 0 2 0  stretch ;
+	border-width:  0 0 2px 0;
 }
 
 .separator,
@@ -972,15 +970,11 @@ GtkMenu {
 .separator:backdrop,
 .separator:hover:backdrop {
 	-GtkWidget-wide-separators: true;
-	-GtkWidget-separator-width: 2px;
-	-GtkWidget-separator-height: 2;
-border:solid;
-    background-image: url("darkelements/line-h.png");
-	background-size: 100% 100%;
-    border-image: url("darkelements/line-h.png") 2 0 0 0 / 2px 0 0 0 stretch ;
-    border-width:2px;
-    padding: 3px 2px;
-    color: alpha(#ffffff, 0.1);
+	-GtkWidget-separator-height: 2px;
+	border:solid;
+    border-image: url("darkelements/line-h.png") 0 0 2 0  stretch ;
+	border-width:  0 0 2px 0;
+   
 }
 
 .separator.horizontal,
@@ -1040,42 +1034,41 @@ GtkCheckButton:selected:focus {
 .menubar .menuitem .menuitem.check,
 .menuitem.check{
     background-image: url("darkelements/check-radio/check1.png");
-	padding: 0;
+
     border-width: 0;
 }
 /* unchecked hover */
 .menubar .menuitem .menuitem.check:prelight,
 .menuitem.check:prelight {
     background-image: url("darkelements/check-radio/check3.png");
-	padding: 0;
+	
     border-width: 0;
 }
 /* checked */
 .menubar .menuitem .menuitem.check:active,
 .menuitem.check:active {
     background-image: url("darkelements/check-radio/check2.png");
-	padding: 0;
+
     border-width: 0;
 }
 /* checked hover */
 .menubar .menuitem .menuitem.check:active:prelight,
 .menuitem.check:active:prelight {
     background-image: url("darkelements/check-radio/check4.png");
-	padding: 0;
+	
     border-width: 0;
 }
 
 .menubar .menuitem .menuitem.check:insensitive,
 .menuitem.check:insensitive{
     background-image: url("darkelements/check-radio/check5.png");
-	padding: 0;
-
+ border-width: 0;
+	
 }
 .menubar .menuitem .menuitem.check:active:insensitive,
 .menuitem.check:active:insensitive{
     background-image: url("darkelements/check-radio/check6.png");
-	padding: 0;
-
+ border-width: 0;
 }
 
 /*
@@ -1095,28 +1088,28 @@ GtkCheckButton:selected:focus {
 .menubar .menuitem .menuitem.radio:active,
 .menuitem.radio{
     background-image: url("darkelements/check-radio/option1.png");   
-	padding: 0; 
+
     border-width: 0;
 }
 /* unchecked hover */
 .menubar .menuitem .menuitem.radio:prelight,
 .menuitem.radio:prelight{
     background-image: url("darkelements/check-radio/option3.png");  
-	padding: 0; 
+	
     border-width: 0;
 }
 /* checked */
 .menubar .menuitem .menuitem.radio:active,
 .menuitem.radio:active {
     background-image: url("darkelements/check-radio/option2.png"); 
-	padding: 0;
+	
     border-width: 0;
 }
 /* checked hover */
 .menubar .menuitem .menuitem.radio:active:prelight,
 .menuitem.radio:active:prelight {
     background-image: url("darkelements/check-radio/option4.png"); 
-	padding: 0;
+	
     border-width: 0;
 }
 
@@ -1124,13 +1117,13 @@ GtkCheckButton:selected:focus {
 .menubar .menuitem .menuitem.radio:insensitive,
 .menuitem.radio:insensitive {
     background-image: url("darkelements/check-radio/option5.png");  
-	padding: 0;
+	
     border-width: 0;
 }
 .menubar .menuitem .menuitem.radio:active:insensitive,
 .menuitem.radio:active:insensitive {
     background-image: url("darkelements/check-radio/option6.png");
-	padding: 0;
+	
     border-width: 0;
 }
 
@@ -1660,7 +1653,7 @@ GtkSwitch.slider:insensitive {
       background-image: url("darkelements/button-insensitive.png");
 	background-size: 100% 100%;
 }
-
+/****************/
 GtkViewport,
 GtkIconView {
     background-color: transparent;
@@ -1669,17 +1662,31 @@ GtkIconView {
 
 GtkIconView.view.cell:selected,
 GtkIconView.view.cell:selected:focused {
-    background-color:transparent;
-    color: @theme_selected_fg_color;
+   
+    background-color: alpha(@theme_base_color, 0.2);
 }
 
-.view {
+.view-old {
     background-color: @theme_base_color;
     color: @theme_fg_color;
     border-radius: 0;
 	border: solid;
     border-width: 2px 2px 2px 2px;
     border-color:transparent;
+}
+/**
+ * Selected Icon 
+ */
+.view {
+    background-color: @theme_base_color;
+    color: @theme_text_color;
+}
+
+
+.view:selected {
+    background-color: shade(@theme_selected_bg_color, 1.02);
+    color: #ffffff;
+  	
 }
 
 /**
@@ -1691,9 +1698,7 @@ GtkTreeView {
 
     -GtkWidget-focus-line-width: 1px;
     -GtkWidget-focus-padding: 1px;
-	border: solid;
-    border-image: url("darkelements/border-passive.png") 2 2 2 2 / 2px 2px 2px 2px stretch stretch;
-    border-width: 2px 2px 2px 2px;
+
 }
 
 GtkTreeView row:nth-child(even),
