--- a/gtk-3.0/gtk-widgets.css
+++ b/gtk-3.0/gtk-widgets.css
@@ -57,12 +57,14 @@ GtkWindow {
    background-image: url("darkelements/bg.jpg");
    background-repeat: repeat-x;
    padding:0;
+   background-color: @theme_bg_color;
 }
 GtkImage {
 	background-color: @transparent;
 }
 * {
-    background-color: @theme_bg_color;
+	
+    /*background-color: @theme_bg_color;*/
 
 }
 
