--- a/gtk-3.0/gtk.css
+++ b/gtk-3.0/gtk.css
@@ -106,6 +106,11 @@
 @define-color scale_progress_border_b #3e90e5;
 
 @define-color wm_title_highlight #111111;
+@define-color wm_shadow #000000;
+
+@define-color osd_text_shadow #000000;
+@define-color window_frame #7C7C7C;
+@define-color window_frame_inactive #3E3E3E;
 
 
 @import url("gtk-widgets.css");
