fix: combobox, switch button, buttons, backdrop

--- a/gtk-3.0/gtk-widgets.css
+++ b/gtk-3.0/gtk-widgets.css
@@ -97,7 +97,8 @@ GtkLabel,
 GtkLabel:insensitive {
     background-color: transparent;
 }
-.button{
+.button,
+.button:selected{
     padding: 3px;
     color: @theme_text_color;
 	border: solid;
@@ -119,7 +120,7 @@ GtkLabel:insensitive {
 
 .button:insensitive {
 	border: solid;
-    background-image: url("darkelements/button-insensitive.png");
+    background-image: url("darkelements/column-header.png");
     border-image: url("darkelements/button-normal-border.png") 2 2 2 2 / 2px 2px 2px 2px stretch stretch;
     border-width:2px;
     background-color: @insensitive_bg_color;
@@ -194,10 +195,10 @@ GtkPaned.pane-separator.horizontal:selected{
 }
 GtkArrow,GtkMenuItem.arrow,
 GtkArrow:hover,GtkMenuItem.arrow:hover{
-	engine:adwaita;
+	/*engine:adwaita;*/
 	-GtkArrow-shadow-style:none;
-	-GtkArrow-arrow-scaling:0.6;
-	-GtkMenuItem-arrow-scaling:0.6;
+	-GtkArrow-arrow-scaling:0.4;
+	-GtkMenuItem-arrow-scaling:0.4;
 	color: #ffffff;
 }
 
@@ -587,6 +588,20 @@ GtkScrolledWindow.frame {
 
 .notebook tab .button {
 	padding: 0;
+	background-image: none;
+	border-image: none;
+	border-width:2px;
+	background-color: transparent;
+	border-color: transparent;
+}
+.notebook tab .button:hover,
+.notebook tab .button:active,
+.notebook tab .button:selected{
+border: solid;
+    background-image: url("darkelements/button-hover.png");
+    border-image: url("darkelements/button-hover-border.png") 2 2 2 2 / 2px 2px 2px 2px stretch stretch;
+    border-width:2px;
+	background-size: 100% 100%;
 }
 
 
@@ -607,10 +622,10 @@ GtkScrolledWindow.frame {
     -GtkRange-stepper-spacing: 0;
     -GtkRange-trough-under-steppers: 0;
 
-	engine: adwaita;
+	/*engine: adwaita;*/
     -GtkArrow-shadow-style:none;
-	-GtkArrow-arrow-scaling:0.6;
-	-GtkMenuItem-arrow-scaling:0.6;
+	-GtkArrow-arrow-scaling:0.4;
+	-GtkMenuItem-arrow-scaling:0.4;
 
 }
 /*vertical*/
@@ -881,14 +896,14 @@ GtkMenu {
 	-GtkMenu-vertical-offset: -2px;
 	-GtkMenu-shadow-type: none;
 	-GtkWidget-wide-seperators: 1;
-	border: 1px solid #ff0000; /* if you see this read you did not override it */
+	border: 1px solid #ff0000; /* if you see this red you did not override it */
 }
 
 .menubar > .menuitem {
-	engine: adwaita;
+	/*engine: adwaita;*/
     -GtkArrow-shadow-style:none;
-	-GtkArrow-arrow-scaling:0.6;
-	-GtkMenuItem-arrow-scaling:0.6;
+	-GtkArrow-arrow-scaling:0.4;
+	-GtkMenuItem-arrow-scaling:0.4;
 	padding: 0 4px 0 4px;
 	
 }
@@ -1040,7 +1055,7 @@ GtkCheckButton:selected:focus {
 .menubar .menuitem .menuitem.check,
 .menuitem.check{
     background-image: url("darkelements/check-radio/check1.png");
-
+	
     border-width: 0;
 }
 /* unchecked hover */
@@ -1366,9 +1381,7 @@ GtkCheckButton:selected:focus {
 
 .toolbar .raised .button:insensitive,
 .toolbar .raised.button:insensitive {
-    background-image: none;
-    background-color: transparent;
-	border-color: transparent;
+    background-image: url("darkelements/column-header.png");
 }
 
 .toolbar .raised .button:hover,
@@ -1432,16 +1445,18 @@ GtkCheckButton:selected:focus {
     icon-shadow: none;
 }
 
-.toolbar .raised.linked.button:nth-child(first),
-.toolbar .raised.linked.button:active:nth-child(first),
-.toolbar .raised.linked:nth-child(first) .button,
-.toolbar .raised.linked:nth-child(first) .button:active {
+
+.toolbar .raised.linked.button:active:nth-child(first){
 	border: solid;
     background-image: url("darkelements/button-hover.png");
     border-image: url("darkelements/button-hover-border.png") 2 2 2 2 / 2px 2px 2px 2px stretch stretch;
     border-width:2px;
     box-shadow: none;
 	background-size: 100% 100%;
+}
+.toolbar .raised.linked.button:insensitive:nth-child(first),
+.toolbar .raised.linked:nth-child(first) .button:insensitive {
+	   background-image: url("darkelements/column-header.png");
 }
 
 .toolbar .raised.linked.button:nth-child(last),
@@ -1611,6 +1626,7 @@ GtkAssistant .sidebar {
 
 GtkSwitch {
     font: bold;
+border-color: transparent;
 }
 GtkSwitch.trough:active{
 	border: solid;
@@ -1642,8 +1658,10 @@ GtkSwitch.slider {
 GtkSwitch.slider:active,
 GtkSwitch.slider:hover{
 	border: solid;
-    background-image: url("darkelements/button-normal.png");
+        background-image: url("darkelements/button-hover.png");
+    border-image: url("darkelements/button-hover-border.png") 2 2 2 2 / 2px 2px 2px 2px stretch;
     border-width: 2px;
+	border-color: transparent;
 	background-size: 100% 100%;
 }
 
@@ -1978,17 +1996,21 @@ GsmFailWhaleDialog * {
     padding-left: 5px;
     padding-right: 5px;
 }
-.header-bar:backdrop{
 
-}
 .header-bar .title,
 .header-bar .subtitle{
- color:#ffffff;
+ color:@selected_fg_color;
+}
+.header-bar .title:backdrop,
+.header-bar .subtitle:backdrop{
+ color:@insensitive_fg_color;
+}
+.header-bar .title{
+	font-weight:bold;
 }
 .header-bar .subtitle{
 	font-size: 90%;
 }
-
 
 /***************
  * Popovers   *
@@ -2005,7 +2027,7 @@ GsmFailWhaleDialog * {
   icon-shadow: none; 
 }
 .popover > .list, 
-.popover > .view, 
+.popover > .view,
 .popover > .toolbar .popover.osd > .toolbar, 
 .popover > .inline-toolbar .popover.osd > .toolbar, 
 .popover > .search-bar .popover.osd > .toolbar, 
@@ -2025,6 +2047,7 @@ GsmFailWhaleDialog * {
     border-style: none;
     background-color: transparent; 
 }
+/* osd - on screen display*/
 .popover.osd {
     background-image: none;
     background-color: alpha(shade(#3D3E40, 0.85), 0.85);
@@ -2043,7 +2066,7 @@ GsmFailWhaleDialog * {
       icon-shadow: 0 -1px @osd_text_shadow; 
 }
 .popover.osd .button:active,
-      .popover.osd .button:checked {
+.popover.osd .button:checked {
         box-shadow: none;
 }
 .popover.osd .button:insensitive {
@@ -2051,7 +2074,8 @@ GsmFailWhaleDialog * {
 }
 
 .popover .list {
-  background-color: @theme_bg_color; }
+  background-color: @theme_base_color; 
+}
 
 .entry.cursor-handle,
 .cursor-handle {
@@ -2073,6 +2097,9 @@ GsmFailWhaleDialog * {
 /*********
  * Lists *
  *********/
+.list{
+	background-color: @theme_base_color;
+}
 .list, .list-row {
  
   border-color: @window_frame; 
@@ -2088,55 +2115,59 @@ GsmFailWhaleDialog * {
   border-radius: 0;
   box-shadow: none;
   border-image: none;
-  border-width: 2px; 
-    background-image: none;	
+  border-width: 0; 
+  background-image: none;	
 }
 
-.list-row:selected .button.flat:focus, .list-row:selected .button.flat {
-  border-image: none; }
+.list-row,
+.list-row:selected,
+.list-row:backdrop{
+	padding:2px;
+}
+.list-row:selected{
+	background-color: @theme_selected_bg_color;
+}
+.list-row:selected .button.flat:focus, 
+.list-row:selected .button.flat {
+
+}
 
 .list-row.button {
-  background-color: transparent; }
+  background-color: transparent; 
+}
 .list-row.button:hover {
-	background-color: @theme_selected_fg_color;
+    background-color: alpha(@theme_selected_bg_color, 0.5);	
 }
 .list-row.button:active, .list-row.button:active:hover {
-    box-shadow: inset 0 2px 2px -2px rgba(0, 0, 0, 0.2);
-    color: @theme_fg_color;
-    background-color: alpha(black, 0.02); 
+    
 }
 .list-row.button:checked {
     color: @theme_fg_color;
     box-shadow: inset 0 2px 3px -1px rgba(0, 0, 0, 0.5); 
 }
 .list-row.button:selected, .list-row.button:selected:hover, .list-row.button:focus, .list-row.button:focus:hover {
-    outline-color: alpha(@theme_selected_fg_color, 0.3); 
+
 }
 .list-row.button:selected, .list-row:selected {
-    background-color: @theme_selected_bg_color;
-    color: @theme_selected_fg_color;
-    outline-color: alpha(@theme_selected_fg_color, 0.3); 
+ background-color: @theme_selected_bg_color;
 }
 .list-row.button:selected:hover {
-    background-color: shade(@theme_selected_bg_color, 1.05);
-    color: @theme_selected_fg_color; 
+
 }
 .list-row.button:selected:active:hover {
-    box-shadow: inset 0 2px 2px -2px rgba(0, 0, 0, 0.5);
-    color: @theme_selected_fg_color;
-    background-color: shade(@theme_selected_bg_color, 0.97); 
+     
 }
 .list-row:selected .button.flat {
-      color: @theme_selected_fg_color; 
+     
 }
 .list-row:selected .button.flat:focus {
-        border-image: none; 
+       
 }
 .list-row:selected .button.flat:hover {
-      color: @theme_fg_color; 
+      
 }
 .list-row:selected .button.flat:active {
-      color: @button_active_text; 
+     
 }
 
 
@@ -2170,7 +2201,7 @@ GsmFailWhaleDialog * {
  * ComboBoxes *
  **************/
 GtkComboBox {
-  -GtkComboBox-arrow-scaling: 0.5;
+  -GtkComboBox-arrow-scaling: 0.4;
   -GtkComboBox-shadow-type: none;
 }
 GtkComboBox > .button {}
@@ -2183,6 +2214,83 @@ GtkComboBox .menuitem {
 }
 GtkComboBox .separator {
     -GtkWidget-wide-separators: true;
-    -GtkWidget-horizontal-separator: 0;
-    -GtkWidget-vertical-separator: 0; 
+
+}
+
+
+/**
+ * Checkboxes
+ ***/
+.check{
+	-gtk-icon-source: -gtk-scaled(url("darkelements/check-radio/check1.png"), url("darkelements/check-radio/check1.png"));
+	padding-right: 5px;
+	margin-right: 5px;  
+}
+.check:hover{
+	-gtk-icon-source: -gtk-scaled(url("darkelements/check-radio/check3.png"), url("darkelements/check-radio/check3.png"));
+	
+}
+.check:checked{
+	-gtk-icon-source: -gtk-scaled(url("darkelements/check-radio/check2.png"), url("darkelements/check-radio/check2.png"));
+	
+}
+.check:checked:prelight{
+	-gtk-icon-source: -gtk-scaled(url("darkelements/check-radio/check4.png"), url("darkelements/check-radio/check4.png"));
+	
+}
+.check:insensitive{
+	-gtk-icon-source: -gtk-scaled(url("darkelements/check-radio/check5.png"), url("darkelements/check-radio/check5.png"));
+	
+}
+.check:checked:insensitive{
+	-gtk-icon-source: -gtk-scaled(url("darkelements/check-radio/check6.png"), url("darkelements/check-radio/check6.png"));
+}
+
+.radio{
+	-gtk-icon-source: -gtk-scaled(url("darkelements/check-radio/option1.png"), url("darkelements/check-radio/option1.png"));
+	
+}
+.radio:hover{
+	-gtk-icon-source: -gtk-scaled(url("darkelements/check-radio/option3.png"), url("darkelements/check-radio/option3.png"));
+	
+}
+.radio:checked{
+	-gtk-icon-source: -gtk-scaled(url("darkelements/check-radio/option2.png"), url("darkelements/check-radio/option.png"));
+	
+}
+.radio:checked:prelight{
+	-gtk-icon-source: -gtk-scaled(url("darkelements/check-radio/option4.png"), url("darkelements/check-radio/option4.png"));
+	
+}
+.radio:insensitive{
+	-gtk-icon-source: -gtk-scaled(url("darkelements/check-radio/option5.png"), url("darkelements/check-radio/option5.png"));
+	
+}
+.radio:checked:insensitive{
+	-gtk-icon-source: -gtk-scaled(url("darkelements/check-radio/option6.png"), url("darkelements/check-radio/option6.png"));
+}
+
+
+GtkCalendar.header .button{
+	background-image: none;
+}
+
+/************
+ * Spinner
+ ************/
+@keyframes spinner{
+	to{-gtk-icon-transform: rotate(1turn);}
+}
+.spinner{
+	background-image: none;
+	background-color: blue;
+	opacity: 0;
+	-gtk-icon-source: -gtk-icontheme("process-working-symbolic");
+}
+.spinner:active{
+	opacity: 1;
+	animation: spinner 1s infinite linear;
+}
+.spinner:active:insensitive{
+	opacity: 0.5;
 }
