[#3] switch, button, toolbar and colors added

--- a/gtk-3.20/gtk.css
+++ b/gtk-3.20/gtk.css
@@ -1850,13 +1850,13 @@ switch, switch slider {
     box-shadow: none; }
 
 switch {
-    background-image: url("switcher-off.png");
+    background-image: url("darkelements/switch/switcher-off.png");
 }
 
 menuitem:hover switch,
 row:selected switch,
 infobar switch {
-    background-image: url("switcher-off.png");
+    background-image: url("darkelements/switch/switcher-off.png");
 }
 
 headerbar switch,
