--- a/gtk-3.20/gtk.css
+++ b/gtk-3.20/gtk.css
@@ -14,7 +14,9 @@
     outline-style: dashed;
     outline-offset: -3px;
     outline-width: 1px;
-    -gtk-outline-radius: 2px; }
+    -gtk-outline-radius: 2px; 
+    color: @theme_text_color;
+}
 
 .background {
     background-color: @theme_bg_color;
@@ -284,11 +286,12 @@ button.flat:disabled, button.sidebar-button:disabled {
     background-image: none; }
 button:disabled {
     background-color: @theme_base_color;
-    color: lighter(@internal_element_color);
-
-    border-image: none;
-    border-style: none;
-    border-width: 0;    
+	border: solid;
+    color: @theme_text_color;
+    background-image: url("darkelements/button-insensitive.png");
+    border-image: url("darkelements/button-normal-border.png") 2 2 2 2 / 2px 2px 2px 2px stretch stretch;
+    border-width:2px;
+	background-size: 100% 100%;   
 }
 
 button.image-button {
@@ -1849,9 +1852,9 @@ scrollbar.vertical slider {
 
 switch {
     font: 1;
-    min-width: 52px;
+    min-width: 74px;
     min-height: 24px;
-    background-size: 52px 24px;
+    background-size: 74px 24px;
     background-repeat: no-repeat;
     background-position: center center; }
 switch slider {
